syntax = "proto2";
package fk.prof.idl;

import "work_entities.proto";

message VersionedPolicyDetails {
    required int32 version = 1;
    required PolicyDetails policyDetails = 2;
}

message PolicyDetails {
    required Policy policy = 1;
    required string modified_by = 2;
    required string modified_at = 3;
    required string created_at = 4;
}

message Policy {
    required Schedule schedule = 1;
    required string description = 2;
    repeated Work work = 3;
}

message Schedule {
    required uint32 duration = 1;
    required uint32 pg_cov_pct = 2;
    required string after = 3;
    optional uint32 min_healthy = 5;
}
